--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -38,4 +38,6 @@
     <string name="whole30">Whole30</string>
     <string name="diet_type">Diet Type</string>
     <string name="apply">Apply</string>
+    <string name="no_internet_connection">No Internet Connection</string>
+    <string name="check_your_connection">Check your connection!</string>
 </resources>
