--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -46,4 +46,5 @@
     <string name="healthy">Healthy</string>
     <string name="cheap">Cheap</string>
     <string name="description">Description</string>
+    <string name="icon_checkbox_circle">Icon Checkbox Circle</string>
 </resources>
