--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -47,4 +47,6 @@
     <string name="cheap">Cheap</string>
     <string name="description">Description</string>
     <string name="icon_checkbox_circle">Icon Checkbox Circle</string>
+    <string name="wifi_connection_icon">Wifi-Connection Icon</string>
+    <string name="filter">Filter</string>
 </resources>
